Auto stash before merge of "master" and "origin/master"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(FEUP_IART)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp piece.cpp piece.h cell.cpp cell.h)
+set(SOURCE_FILES main.cpp Piece.cpp Piece.h Cell.cpp Cell.h Board.cpp Board.h)
 add_executable(FEUP_IART ${SOURCE_FILES})
